; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp2.c_M68KStop.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp2.c_M68KStop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@scsp_thread_running = common dso_local global i64 0, align 8
@m68k_running = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M68KStop() #0 {
  %1 = load i64, i64* @scsp_thread_running, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @ScspSyncThread()
  br label %5

5:                                                ; preds = %3, %0
  store i64 0, i64* @m68k_running, align 8
  %6 = load i64, i64* @scsp_thread_running, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %5
  %9 = call i32 (...) @PSP_FLUSH_ALL()
  br label %10

10:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @ScspSyncThread(...) #1

declare dso_local i32 @PSP_FLUSH_ALL(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
